fix: extended language context bar fixes

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/tag/tag_list.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/tag/tag_list.html.twig
@@ -16,6 +16,7 @@
 {% block languageBar %}
     <twig:Xutim:Admin:LanguageContextBar
         class="d-flex justify-content-end align-items-center mb-2"
+        :showExtendedLanguages="false"
     />
 {% endblock %}
 
