--- a/src/Xutim/Bundle/CoreBundle/templates/admin/tag/tag_edit.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/tag/tag_edit.html.twig
@@ -32,6 +32,7 @@
         :entity="tag"
         :simpleTranslation="true"
         class="d-flex justify-content-end align-items-center mb-2"
+        :showExtendedLanguages="false"
     />
 {% endblock %}
 
