--- a/src/Xutim/Bundle/CoreBundle/templates/components/Admin/LanguageContextBar.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/components/Admin/LanguageContextBar.html.twig
@@ -1,30 +1,38 @@
 {% import _self as macro %}
 
 <div class="d-flex flex-column justify-content-start">
-    <div class="d-flex justify-content-end align-items-center mb-2">
-        {%
-            for locale in site_context.locales|filter(locale => app.user.canTranslate(locale))
-        %}
-            {{ dump(showExtendedLanguages == true ? 'true' : 'false') }}
-            sldkfjdslf
-            {{
-                macro.renderLocale(locale, this.entity, this.simpleTranslation)
-            }}
-        {% endfor %}
-    </div>
-
     {%
-        if site_context.extendedContentLocales is not empty and showExtendedLanguages is same as(true)
+        set mainLanguages = site_context.locales
+        |filter(locale =>
+            app.user.canTranslate(locale),
+        )
     %}
+    {% if mainLanguages is not empty %}
         <div class="d-flex justify-content-end align-items-center mb-2">
-            {%
-                for locale in site_context.extendedContentLocales|filter(locale => app.user.canTranslate(locale))
-            %}
+            {% for locale in mainLanguages %}
                 {{
                     macro.renderLocale(locale, this.entity, this.simpleTranslation)
                 }}
             {% endfor %}
         </div>
+    {% endif %}
+
+    {% if this.showExtendedLanguages is same as(true) %}
+        {%
+            set extendedLanguages = site_context.extendedContentLocales
+            |filter(locale =>
+                app.user.canTranslate(locale),
+            )
+        %}
+        {% if extendedLanguages is not empty %}
+            <div class="d-flex justify-content-end align-items-center flex-wrap row-gap-1">
+                {% for locale in extendedLanguages %}
+                    {{
+                        macro.renderLocale(locale, this.entity, this.simpleTranslation)
+                    }}
+                {% endfor %}
+            </div>
+        {% endif %}
     {% endif %}
 </div>
 
