--- a/src/Xutim/Bundle/SecurityBundle/templates/security/login.html.twig
+++ b/src/Xutim/Bundle/SecurityBundle/templates/security/login.html.twig
@@ -71,7 +71,7 @@
                                 {{ 'password'|trans({}, 'admin')|capitalize }}
                                 <span class="form-label-description">
                                     <a
-                                        href="{{ admin_path('admin_forgot_password_request') }}"
+                                        href="{{ path('admin_forgot_password_request') }}"
                                         id="reset-password-link"
                                     >
                                         {{
