feat: add tooltip to the dates

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/article/article_list.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/article/article_list.html.twig
@@ -150,11 +150,21 @@
                     {% endif %}
                 </td>
                 <td>
-                    {{ translation.updatedAt|time_ago() }}
+                    <span
+                        title="{{ translation.updatedAt|date('d/m/Y H:i') }}"
+                        data-controller="tooltip"
+                    >
+                        {{ translation.updatedAt|time_ago() }}
+                    </span>
                 </td>
                 <td>
                     {% if translation.publishedAt %}
-                        {{ translation.publishedAt|time_ago() }}
+                        <span
+                            title="{{ translation.publishedAt|date('d/m/Y H:i') }}"
+                            data-controller="tooltip"
+                        >
+                            {{ translation.publishedAt|time_ago() }}
+                        </span>
                     {% else %}
                         -
                     {% endif %}
