fix: english grammar changes.

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/article/_article_sidebar.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/article/_article_sidebar.html.twig
@@ -28,7 +28,7 @@
                         href="{{ admin_path('admin_article_edit', {id: article.id}) }}"
                         tag="a"
                     >
-                        {{ 'Add the translation'|trans({}, 'admin') }}
+                        {{ 'Add translation'|trans({}, 'admin') }}
                     </twig:Xutim:Admin:Button>
                 </twig:block>
             </twig:Xutim:Admin:SidebarItem>
