--- a/src/Xutim/Bundle/CoreBundle/templates/admin/tag/_tag_sidebar.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/tag/_tag_sidebar.html.twig
@@ -26,7 +26,7 @@
                         href="{{ admin_path('admin_tag_edit', {id: tag.id}) }}"
                         tag="a"
                     >
-                        {{ 'Add the translation'|trans({}, 'admin') }}
+                        {{ 'Add translation'|trans({}, 'admin') }}
                     </twig:Xutim:Admin:Button>
                 </twig:block>
             </twig:Xutim:Admin:SidebarItem>
