feat: use admin homepage redirect action when logging in

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/_impersonate_bar.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/_impersonate_bar.html.twig
@@ -18,7 +18,7 @@
             </div>
             <div>
                 <a
-                    href="{{ impersonation_exit_path(path('admin_user_list')) }}"
+                    href="{{ impersonation_exit_path(admin_path('admin_user_list')) }}"
                     class="text-white"
                     data-turbo-prefetch="false"
                 >
