--- a/src/Xutim/Bundle/CoreBundle/templates/admin/article/article_list.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/article/article_list.html.twig
@@ -150,21 +150,27 @@
                     {% endif %}
                 </td>
                 <td>
-                    <span
-                        title="{{ translation.updatedAt|date('d/m/Y H:i') }}"
+                    <time
+                        datetime="{{ translation.updatedAt|date('c') }}"
+                        title="{{ translation.updatedAt|format_datetime('long') }}"
+                        class="inline-flex flex-col leading-tight text-xs"
                         data-controller="tooltip"
                     >
-                        {{ translation.updatedAt|time_ago() }}
-                    </span>
+                        <span>{{ translation.updatedAt|time_ago() }}</span>
+                    </time>
                 </td>
                 <td>
                     {% if translation.publishedAt %}
-                        <span
-                            title="{{ translation.publishedAt|date('d/m/Y H:i') }}"
+                        <time
+                            datetime="{{ translation.publishedAt|date('c') }}"
+                            title="{{ translation.publishedAt|format_datetime('long') }}"
+                            class="inline-flex flex-col leading-tight text-xs"
                             data-controller="tooltip"
                         >
-                            {{ translation.publishedAt|time_ago() }}
-                        </span>
+                            <span>{{
+                                translation.publishedAt|time_ago()
+                            }}</span>
+                        </time>
                     {% else %}
                         -
                     {% endif %}
