feat: fix the reset password doesn't show validation errors.

--- a/src/Xutim/Bundle/SecurityBundle/templates/security/reset_password/reset.html.twig
+++ b/src/Xutim/Bundle/SecurityBundle/templates/security/reset_password/reset.html.twig
@@ -7,11 +7,24 @@
         <div class="container container-tight py-4">
             <h1>Reset your password</h1>
 
-            {{ form_start(resetForm) }}
-            {{ form_row(resetForm.plainPassword) }}
-            <twig:Xutim:Admin:Button variant="primary">
+            {% for message in app.flashes('reset_password_error') %}
+                {{
+                    component('Xutim:Admin:Alert', {
+                        type: 'reset_password_error',
+                        message: message,
+                    })
+                }}
+            {% endfor %}
+
+            {{
+                form_start(resetForm, {attr: {novalidate: 'novalidate', 'data-turbo': 'false'}})
+            }}
+            {{ form_row(resetForm.plainPassword.first) }}
+            {{ form_row(resetForm.plainPassword.second) }}
+
+            <button type="submit" class="btn btn-primary">
                 Reset password
-            </twig:Xutim:Admin:Button>
+            </button>
             {{ form_end(resetForm) }}
         </div>
     </div>
