chore(core): Minor perf. improvements.

--- a/src/Xutim/Bundle/CoreBundle/templates/components/Admin/LanguageContextBar.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/components/Admin/LanguageContextBar.html.twig
@@ -1,6 +1,13 @@
 {% import _self as macro %}
 
 <div class="d-flex flex-column justify-content-start">
+    {% set routeName = app.request.attributes.get('_route') %}
+    {%
+        set baseRouteParams = app.request.attributes.get('_route_params')|default({})
+    %}
+    {% set baseQuery = app.request.query.all() %}
+    {% set activeLocale = content_context_language() %}
+    {% set translatedLabel = 'Translated'|trans({}, 'admin') %}
     {%
         set mainLanguages = site_context.locales
         |filter(locale =>
@@ -11,7 +18,16 @@
         <div class="d-flex justify-content-end align-items-center mb-2">
             {% for locale in mainLanguages %}
                 {{
-                    macro.renderLocale(locale, this.entity, this.simpleTranslation)
+                    macro.renderLocale(
+                        locale,
+                        this.entity,
+                        this.simpleTranslation,
+                        routeName,
+                        baseRouteParams,
+                        baseQuery,
+                        activeLocale,
+                        translatedLabel,
+                    )
                 }}
             {% endfor %}
         </div>
@@ -28,7 +44,16 @@
             <div class="d-flex justify-content-end align-items-center flex-wrap row-gap-1">
                 {% for locale in extendedLanguages %}
                     {{
-                        macro.renderLocale(locale, this.entity, this.simpleTranslation)
+                        macro.renderLocale(
+                            locale,
+                            this.entity,
+                            this.simpleTranslation,
+                            routeName,
+                            baseRouteParams,
+                            baseQuery,
+                            activeLocale,
+                            translatedLabel,
+                        )
                     }}
                 {% endfor %}
             </div>
@@ -36,32 +61,30 @@
     {% endif %}
 </div>
 
-{% macro renderLocale(locale, entity, simpleTranslation) %}
+{%
+    macro renderLocale(locale, entity, simpleTranslation, routeName, baseRouteParams, baseQuery, activeLocale, translatedLabel)
+%}
+    {% import '@XutimCore/admin/common/badges.html.twig' as badges %}
     {%
-        set routeParams = app.request.attributes.get('_route_params')|merge({_content_locale: locale})
+        set fullParams = baseRouteParams|merge({_content_locale: locale})|merge(baseQuery)
     %}
-    {% set fullParams = routeParams|merge(app.request.query.all()) %}
     <a
-        href="{{ path(app.request.attributes.get('_route'), fullParams) }}"
+        href="{{ path(routeName, fullParams) }}"
         data-turbo-prefetch="false"
     >
-        {% set isActive = locale == content_context_language() %}
+        {% set isActive = locale == activeLocale %}
         {%
             set classes = isActive ? ' bg-outline-primary border-3 border-primary' : 'text-secondary'
         %}
 
         <twig:Xutim:Admin:Badge class="{{ classes }}">
-            {% import '@XutimCore/admin/common/badges.html.twig' as badges %}
-
             {% if entity is not null %}
                 {% set trans = entity.translationByLocale(locale) %}
                 {% if trans is null %}
                     {{ badges.missingBadge() }}
                 {% else %}
                     {% if simpleTranslation == true %}
-                        {{
-                            badges.badge('text-bg-green', 'Translated'|trans({}, 'admin'))
-                        }}
+                        {{ badges.badge('text-bg-green', translatedLabel) }}
                     {% else %}
                         {{ badges.publicationStatusBadge(trans) }}
                     {% endif %}
